--- a/css/style.css
+++ b/css/style.css
@@ -346,7 +346,25 @@ main .main-content .main-musics .musics .main-player {
 main .main-content .main-musics .musics .main-player .music-header {
   width: 100%;
   height: 100px;
-  background-color: red;
+  background-color: yellow;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+main .main-content .main-musics .musics .main-player .music-header .aboutmusic .a {
+  width: 129px;
+  height: 103px;
+  background-color: green;
+}
+
+main .main-content .main-musics .musics .main-player .music-header .aboutmusic .b {
+  width: 129px;
+  height: 103px;
+  background-color: green;
 }
 
 main .main-content .main-musics .musics .main-player .music-buttons {
