--- a/css/style.css
+++ b/css/style.css
@@ -22,9 +22,7 @@
       -ms-flex-direction: column;
           flex-direction: column;
   background-color: #E5E5E5;
-  height: -webkit-max-content;
-  height: -moz-max-content;
-  height: max-content;
+  height: 100%;
 }
 
 header {
@@ -107,6 +105,10 @@ header .header-content nav ul li a {
 header .header-content nav ul .active {
   border-bottom: 1px solid #9650E9;
   color: #9650E9;
+}
+
+header .header-content .toggle {
+  display: none;
 }
 
 .search {
@@ -221,7 +223,7 @@ main .main-content .main-musics {
 }
 
 main .main-content .main-musics .musics {
-  width: 726px;
+  width: 100%;
   height: 1000px;
 }
 
@@ -255,7 +257,7 @@ main .main-content .main-musics .musics .similar-musics {
 }
 
 main .main-content .main-musics .musics .music {
-  width: 726px;
+  width: 90%;
   padding: 10px 10px 10px 10px;
   background-color: rgba(150, 80, 233, 0.1);
   border-radius: 10px;
@@ -409,7 +411,50 @@ main .main-content .main-musics .musics .main-player .music-header .services__in
 main .main-content .main-musics .musics .main-player .music-buttons {
   width: 100%;
   height: 44px;
-  background-color: yellow;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+main .main-content .main-musics .musics .main-player .music-buttons a {
+  color: white;
+  text-decoration: none;
+}
+
+main .main-content .main-musics .musics .main-player .music-buttons div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 170px;
+  height: 44px;
+  background-color: #9650E9;
+  border-radius: 10px;
+  padding: 5px;
+}
+
+main .main-content .main-musics .musics .main-player .music-buttons div p {
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  color: #FFFFFF;
+}
+
+main .main-content .main-musics .musics .main-player .music-buttons .download {
+  margin-right: 230px;
 }
 
 main .main-content .main-musics .musics .main-player .music-text {
@@ -750,28 +795,619 @@ footer .footer-content .ad {
 }
 
 .player {
+  position: fixed;
+  bottom: 0;
   margin-top: 50px;
-  width: 100%;
-  height: 210px;
-  background-color: rgba(0, 0, 0, 0.1);
+  width: 80%;
+  height: 202px;
+  background-color: #A47ECF;
+  border-radius: 20px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   display: none;
 }
 
-.player .player-content {
-  position: fixed;
-  bottom: 0;
-  width: 1074px;
-  height: 202px;
-  background: #A47ECF;
-  border-radius: 20px;
+.player .music-info {
+  width: 127px;
+  height: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.player .music-info .player-name {
+  margin-top: 20px;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 19px;
+  color: #FFFFFF;
+  cursor: pointer;
+}
+
+.player .music-info .player-artist {
+  margin-top: 5px;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  color: #FFFFFF;
+  cursor: pointer;
+}
+
+.player .player-buttons {
+  width: 70%;
+  height: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.player .player-buttons .center {
+  width: 40%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.player .player-buttons div {
+  cursor: pointer;
+}
+
+.player .player-length {
+  width: 80%;
+  height: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.player .player-length p {
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 22px;
+  line-height: 26px;
+  color: #FFFFFF;
+  cursor: pointer;
+}
+
+.player .player-length .length {
+  width: 600px;
+  height: 5px;
+  background-color: white;
+  border-radius: 6px;
+}
+
+@media only screen and (min-width: 375px) and (max-width: 768px), (max-width: 375px) {
+  header {
+    width: 95%;
+    height: 55px;
+  }
+  header .header-content nav {
+    display: none;
+  }
+  header .header-content .toggle {
+    width: 20px;
+    height: 14px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    cursor: pointer;
+  }
+  header .header-content .toggle div {
+    width: 20px;
+    height: 2px;
+    background-color: #9650E9;
+  }
+  .search {
+    margin: 0 auto;
+    width: 80%;
+    height: 50px;
+    margin-top: 10px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .search input {
+    width: 550px;
+    height: 50px;
+    background-color: #F8F3FE;
+    border-radius: 95px;
+    border: none;
+    padding: 0 19px 0 0;
+  }
+  .search input::-webkit-input-placeholder {
+    text-align: left;
+    padding-left: 20px;
+    font-family: 'Raleway';
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    color: #868686;
+  }
+  .search input:-ms-input-placeholder {
+    text-align: left;
+    padding-left: 20px;
+    font-family: 'Raleway';
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    color: #868686;
+  }
+  .search input::-ms-input-placeholder {
+    text-align: left;
+    padding-left: 20px;
+    font-family: 'Raleway';
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    color: #868686;
+  }
+  .search input::placeholder {
+    text-align: left;
+    padding-left: 20px;
+    font-family: 'Raleway';
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    color: #868686;
+  }
+  .search .search-icon {
+    position: absolute;
+  }
+  main {
+    width: 80%;
+    height: 1050px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  main .main-content {
+    width: 100%;
+    height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: space-between;
+        -ms-flex-align: space-between;
+            align-items: space-between;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  main .main-content .main-musics {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  main .main-content .main-musics .musics {
+    width: 726px;
+    height: 1000px;
+  }
+  main .main-content .main-musics .musics .popular-musics {
+    width: 100%;
+    height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  main .main-content .main-musics .musics .similar-musics {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    height: 1050px;
+  }
+  main .main-content .main-musics .musics .music {
+    width: 100%;
+    padding: 10px 10px 10px 10px;
+    background-color: rgba(150, 80, 233, 0.1);
+    border-radius: 10px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-bottom: 10px;
+  }
+  main .main-content .main-musics .musics .music .play-btn {
+    width: 40px;
+    height: 40px;
+    margin-left: 10px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    cursor: pointer;
+  }
+  main .main-content .main-musics .musics .music .about-music {
+    width: 127px;
+    height: 40px;
+    position: absolute;
+    margin-left: 80px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    cursor: pointer;
+  }
+  main .main-content .main-musics .musics .music .about-music .music-title {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    color: #323232;
+  }
+  main .main-content .main-musics .musics .music .about-music .music-subtitle {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 19px;
+    color: #323232;
+  }
+  main .main-content .main-musics .musics .music .download-btn {
+    width: 25px;
+    height: 32px;
+    margin-right: 10px;
+  }
+  main .main-content .main-musics .musics .main-player {
+    width: 592px;
+    height: -webkit-max-content;
+    height: -moz-max-content;
+    height: max-content;
+    margin-bottom: 20px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  main .main-content .main-musics .musics .main-player .music-header {
+    width: 100%;
+    height: 100px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    margin-bottom: 10px;
+  }
+  main .main-content .main-musics .musics .main-player .music-header .services {
+    margin-left: 0px;
+    width: 129px;
+    height: 103px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  main .main-content .main-musics .musics .main-player .music-header .services div {
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    color: #AFAFAF;
+  }
+  main .main-content .main-musics .musics .main-player .music-header .services__info {
+    margin-right: 200px;
+    width: 129px;
+    height: 103px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  main .main-content .main-musics .musics .main-player .music-header .services__info div {
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    color: #323232;
+  }
+  main .main-content .main-musics .musics .main-player .music-buttons {
+    width: 100%;
+    height: 44px;
+    background-color: yellow;
+  }
+  main .main-content .main-musics .musics .main-player .music-text {
+    margin-top: 10px;
+    width: 100%;
+    height: -webkit-max-content;
+    height: -moz-max-content;
+    height: max-content;
+  }
+  main .main-content .main-musics .musics .main-player .music-text p {
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 16px;
+    color: #323232;
+  }
+  main .main-content .main-musics .musics h1 {
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 42px;
+    color: #323232;
+    margin-bottom: 20px;
+  }
+  main .main-content .main-musics .musics h2 {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    color: #000000;
+    margin-bottom: 20px;
+  }
+  main .main-content .main-musics .musics h3 {
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 42px;
+    color: #323232;
+    margin-bottom: 70px;
+  }
+  main .main-content .main-musics .sections {
+    width: 330px;
+    height: 1040px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    display: none;
+  }
+  main .main-content .main-musics .sections .category {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    background-color: rgba(150, 80, 233, 0.05);
+    border-radius: 15px;
+  }
+  main .main-content .main-musics .sections .category h2 {
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 42px;
+    color: #323232;
+    margin-top: 10px;
+  }
+  main .main-content .main-musics .sections .category ul {
+    height: 361px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-bottom: 60px;
+    margin-right: 120px;
+  }
+  main .main-content .main-musics .sections .category ul li {
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    color: #323232;
+    list-style-image: url(../icons/square.svg);
+    cursor: pointer;
+  }
+  main .main-content .main-musics .sections .new-musics {
+    display: none;
+  }
+  .modal-category {
+    -webkit-transition: 0.3 ease;
+    transition: 0.3 ease;
+    width: 80vw;
+    height: 100vh;
+    background-color: white;
+    position: absolute;
+    top: 0;
+    left: -100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    border-radius: 0px 20px 20px 0px;
+    overflow: hidden;
+  }
+  .modal-category h4 {
+    margin-left: 16px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 19px;
+    color: #323232;
+  }
+  .modal-category ul {
+    margin-left: 40px;
+    height: -webkit-max-content;
+    height: -moz-max-content;
+    height: max-content;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-bottom: 60px;
+    margin-right: 120px;
+  }
+  .modal-category ul li {
+    margin-top: 10px;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    color: #323232;
+    list-style-image: url(../icons/square.svg);
+    cursor: pointer;
+  }
+  .modal-category .menu-close {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    font-size: 25px;
+    color: #9650E9;
+    cursor: pointer;
+  }
 }
 /*# sourceMappingURL=style.css.map */
