--- a/css/style.css
+++ b/css/style.css
@@ -922,6 +922,13 @@ footer .footer-content .ad {
 }
 
 @media only screen and (min-width: 375px) and (max-width: 768px), (max-width: 375px) {
+  .wrapper {
+    height: -webkit-max-content;
+    height: -moz-max-content;
+    height: max-content;
+    background-color: #E5E5E5;
+    padding-bottom: 100px;
+  }
   header {
     width: 95%;
     height: 55px;
@@ -1338,6 +1345,34 @@ footer .footer-content .ad {
   }
   main .main-content .main-musics .sections .new-musics {
     display: none;
+  }
+  footer .footer-content {
+    height: 250px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  footer .footer-content nav ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
   .modal-category {
     -webkit-transition: 0.3 ease;
