--- a/scss/style.scss
+++ b/scss/style.scss
@@ -590,7 +590,11 @@ footer{
     }
 }
 @media only screen and (min-width: 375px) and (max-width: 768px) , (max-width: 375px){
-
+.wrapper{
+    height: max-content;
+    background-color: #E5E5E5;
+    padding-bottom: 100px;
+}
 
 header{
     width: 95%;
@@ -872,6 +876,22 @@ main{
                 
             }
         }
+}
+footer{
+    .footer-content{
+        height: 250px ;
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+        nav{
+            ul{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            flex-direction: column;
+        }
+    }
+}
 }
 .modal-category{
     transition: 0.3 ease;
