--- a/css/style.css
+++ b/css/style.css
@@ -125,21 +125,28 @@ header .header-content .toggle {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  position: relative;
 }
 
 .search input {
-  width: 550px;
+  width: 55%;
   height: 50px;
   background-color: #F8F3FE;
   border-radius: 95px;
   border: none;
   padding: 0 19px 0 0;
+  text-align: center;
+  font-family: 'Raleway';
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  color: #868686;
 }
 
 .search input::-webkit-input-placeholder {
   text-align: center;
   font-family: 'Raleway';
-  font-weight: 400;
+  font-weight: 700;
   font-size: 16px;
   line-height: 19px;
   color: #868686;
@@ -148,7 +155,7 @@ header .header-content .toggle {
 .search input:-ms-input-placeholder {
   text-align: center;
   font-family: 'Raleway';
-  font-weight: 400;
+  font-weight: 700;
   font-size: 16px;
   line-height: 19px;
   color: #868686;
@@ -157,7 +164,7 @@ header .header-content .toggle {
 .search input::-ms-input-placeholder {
   text-align: center;
   font-family: 'Raleway';
-  font-weight: 400;
+  font-weight: 700;
   font-size: 16px;
   line-height: 19px;
   color: #868686;
@@ -166,7 +173,7 @@ header .header-content .toggle {
 .search input::placeholder {
   text-align: center;
   font-family: 'Raleway';
-  font-weight: 400;
+  font-weight: 700;
   font-size: 16px;
   line-height: 19px;
   color: #868686;
@@ -174,6 +181,8 @@ header .header-content .toggle {
 
 .search .search-icon {
   position: absolute;
+  right: 300px;
+  cursor: pointer;
 }
 
 main {
@@ -815,7 +824,6 @@ footer .footer-content .ad {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  display: none;
 }
 
 .player .music-info {
@@ -979,7 +987,7 @@ footer .footer-content .ad {
             align-items: center;
   }
   .search input {
-    width: 550px;
+    width: 100%;
     height: 50px;
     background-color: #F8F3FE;
     border-radius: 95px;
@@ -1024,6 +1032,7 @@ footer .footer-content .ad {
   }
   .search .search-icon {
     position: absolute;
+    right: 50px;
   }
   main {
     width: 80%;
@@ -1462,6 +1471,73 @@ footer .footer-content .ad {
   }
   header .header-content .toggle {
     display: none;
+  }
+  .search {
+    margin: 0 auto;
+    width: 80%;
+    height: 50px;
+    margin-top: 10px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    position: relative;
+  }
+  .search input {
+    width: 70%;
+    height: 50px;
+    background-color: #F8F3FE;
+    border-radius: 95px;
+    border: none;
+    padding: 0 19px 0 0;
+    text-align: center;
+    font-family: 'Raleway';
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    color: #868686;
+  }
+  .search input::-webkit-input-placeholder {
+    text-align: center;
+    font-family: 'Raleway';
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 19px;
+    color: #868686;
+  }
+  .search input:-ms-input-placeholder {
+    text-align: center;
+    font-family: 'Raleway';
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 19px;
+    color: #868686;
+  }
+  .search input::-ms-input-placeholder {
+    text-align: center;
+    font-family: 'Raleway';
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 19px;
+    color: #868686;
+  }
+  .search input::placeholder {
+    text-align: center;
+    font-family: 'Raleway';
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 19px;
+    color: #868686;
+  }
+  .search .search-icon {
+    position: absolute;
+    right: 300px;
+    cursor: pointer;
   }
   main {
     margin: 0 auto;
