--- a/scss/style.scss
+++ b/scss/style.scss
@@ -78,17 +78,24 @@ header{
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
     input{
-        width: 550px;
+        width: 55%;
         height: 50px;
         background-color: #F8F3FE;
         border-radius: 95px;
         border: none;
         padding: 0 19px 0 0;
+        text-align: center;
+        font-family: 'Raleway';
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 19px;
+        color: #868686;
         &::placeholder{
             text-align: center;
             font-family: 'Raleway';
-            font-weight: 400;
+            font-weight: 700;
             font-size: 16px;
             line-height: 19px;
             color: #868686;
@@ -96,6 +103,8 @@ header{
     }
     .search-icon{
         position: absolute;
+        right: 300px;
+        cursor: pointer;
     }
 
 
@@ -516,7 +525,7 @@ footer{
     justify-content: space-between;
     flex-direction: column;
     align-items: center;
-    display: none;
+    // display: none;
     .music-info{
         width: 127px;
         height: 40px;
@@ -630,7 +639,7 @@ header{
     justify-content: center;
     align-items: center;
     input{
-        width: 550px;
+        width: 100%;
         height: 50px;
         background-color: #F8F3FE;
         border-radius: 95px;
@@ -648,6 +657,7 @@ header{
     }
     .search-icon{
         position: absolute;
+        right: 50px;
     }
 
 
@@ -964,6 +974,45 @@ footer{
             }
         }
     }
+    .search{    
+        margin: 0 auto;
+        width: 80%;
+        height: 50px;
+        margin-top: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        input{
+            width: 70%;
+            height: 50px;
+            background-color: #F8F3FE;
+            border-radius: 95px;
+            border: none;
+            padding: 0 19px 0 0;
+            text-align: center;
+            font-family: 'Raleway';
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 19px;
+            color: #868686;
+            &::placeholder{
+                text-align: center;
+                font-family: 'Raleway';
+                font-weight: 700;
+                font-size: 16px;
+                line-height: 19px;
+                color: #868686;
+            }
+        }
+        .search-icon{
+            position: absolute;
+            right: 300px;
+            cursor: pointer;
+        }
+    
+    
+        }
     main{
         margin: 0 auto;
         margin-top: 20px;
