--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,7 +10,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-color: #E5E5E5;
+    background: #F8F3FE;
     height:100%;
 }
 header{
@@ -82,7 +82,7 @@ header{
     input{
         width: 55%;
         height: 50px;
-        background-color: #F8F3FE;
+        background: rgba(230, 218, 244, 0.82);
         border-radius: 95px;
         border: none;
         padding: 0 19px 0 0;
@@ -95,10 +95,13 @@ header{
         &::placeholder{
             text-align: center;
             font-family: 'Raleway';
-            font-weight: 700;
+            font-style: normal;
+            font-weight: 400;
             font-size: 16px;
             line-height: 19px;
             color: #868686;
+            
+            
         }
     }
     .search-icon{
@@ -146,7 +149,7 @@ main{
                 }
                 .music{
                     width: 90%;
-                    padding: 10px 10px 10px 10px;
+                    padding: 10px;
                     background-color: rgba(150, 80, 233, 0.1);
                     border-radius: 10px;
                     display: flex;
@@ -317,10 +320,11 @@ main{
             }
             .sections{
                 width: 330px;
-                height: 1040px;
+                height: 1000px;
                 flex-direction: column;
                 justify-content: space-between;
                 .category{
+                    margin-top: 60px;
                     display: flex;
                     flex-direction: column;
                     justify-content: space-between;
@@ -329,6 +333,7 @@ main{
                     height: 500px;
                     background-color: rgba(150, 80, 233, 0.05);
                     border-radius: 15px;
+                    padding: 5px;
                     h2{
                         font-family: 'Raleway';
                         font-style: normal;
@@ -359,15 +364,17 @@ main{
                         }
                 }
                 .new-musics{
+                    margin-bottom: 5px;
                     display: flex;
                     flex-direction: column;
                     justify-content: space-between;
                     align-items: center;    
-                    margin-top: 10px;
+                    margin-top: 50px;
                     width: 330px;
                     height: 500px;
                     background-color: rgba(150, 80, 233, 0.05);
                     border-radius: 15px;
+                    padding: 5px;
                     h2{
                         font-family: 'Raleway';
                         font-style: normal;
@@ -427,12 +434,13 @@ main{
             }
         }
         .tabheader{
+            margin-top: 150px;
             width: 100%;
             height: 40px;
             display: flex;
             justify-content: center;
             align-items: center;
-            display: none;
+            // display: none;
             .tabheader-items{
                 width: 25%;
                 display: flex;
@@ -444,14 +452,19 @@ main{
                     align-items: center;    
                     width: 24px;
                     height: 24px;
-                    background-color: #9650E9;
+                    background: rgba(230, 218, 244, 0.82);
                     font-family: 'Raleway';
                     font-style: normal;
                     font-weight: 400;
                     font-size: 16px;
                     line-height: 19px;
                     color: #FFFFFF;
+                    cursor: pointer;
                     
+                }
+                .active{
+                background-color: #9650E9;
+
                 }
                 .none{
                     background-color: rgba(150, 80, 233, 0.1);;
@@ -514,7 +527,7 @@ footer{
     }
 }
 .player{
-    position: fixed;
+    position: sticky;
     bottom: 0;
     margin-top: 50px;
     width: 80%;
@@ -525,7 +538,7 @@ footer{
     justify-content: space-between;
     flex-direction: column;
     align-items: center;
-    // display: none;
+    display: none;
     .music-info{
         width: 127px;
         height: 40px;
@@ -593,6 +606,12 @@ footer{
             height: 5px;
             background-color: white;
             border-radius: 6px;
+            .e{
+                width: 20%;
+                height: 100%;
+                background-color: red;
+                border-radius:6px ;
+                }
         }
 
     }
@@ -603,7 +622,7 @@ footer{
 @media only screen and (min-width: 375px) and (max-width: 768px) , (max-width: 375px){
 .wrapper{
     height: max-content;
-    background-color: #E5E5E5;
+    // background-color: #E5E5E5;
     padding-bottom: 100px;
 }
 
@@ -638,23 +657,6 @@ header{
     display: flex;
     justify-content: center;
     align-items: center;
-    input{
-        width: 100%;
-        height: 50px;
-        background-color: #F8F3FE;
-        border-radius: 95px;
-        border: none;
-        padding: 0 19px 0 0;
-        &::placeholder{
-            text-align: left;
-            padding-left: 20px;
-            font-family: 'Raleway';
-            font-weight: 400;
-            font-size: 16px;
-            line-height: 19px;
-            color: #868686;
-        }
-    }
     .search-icon{
         position: absolute;
         right: 50px;
@@ -906,13 +908,14 @@ footer{
 }
 }
 .modal-category{
-    transition: 0.3 ease;
+    transition: 1.5s ease;
     width: 80vw;
     height: 100vh;
     background-color: white;
     position: absolute;
     top: 0;
-    left: -100%;
+    left: 0;
+    margin-left: -100%; 
     display: flex;
     flex-direction: column;
     align-items: flex-start;
