--- a/scss/style.scss
+++ b/scss/style.scss
@@ -376,6 +376,7 @@ main{
                     border-radius: 15px;
                     padding: 5px;
                     h2{
+                        margin-top: 20px;
                         font-family: 'Raleway';
                         font-style: normal;
                         font-weight: 700;
