--- a/scss/style.scss
+++ b/scss/style.scss
@@ -81,6 +81,7 @@ header{
     align-items: center;
     position: relative;
     input{
+        padding-left:25px;
         width: 100%;
         height: 100%;
         background: rgba(230, 218, 244, 0.82);
@@ -375,19 +376,18 @@ main{
                         }
                 }
                 .new-musics{
-                    margin-bottom: 5px;
                     display: flex;
                     flex-direction: column;
                     justify-content: space-between;
                     align-items: center;    
                     margin-top: 50px;
                     width: 330px;
-                    height: 500px;
+                    height: max-content;
                     background-color: rgba(150, 80, 233, 0.05);
                     border-radius: 15px;
                     padding: 5px;
                     h2{
-                        margin-top: 20px;
+                        margin-bottom: 35px;
                         font-family: 'Raleway';
                         font-style: normal;
                         font-weight: 700;
@@ -541,7 +541,10 @@ footer{
     position: sticky;
     bottom: 0;
     margin-top: 50px;
-    width: 100%;
+    padding-bottom: 20px;
+    padding-top: 20px;
+    width: 80%;
+    border-radius: 20px;
     height: 202px;
     background-color: #A47ECF;
     display: flex;
@@ -633,7 +636,6 @@ footer{
     height: max-content;
     padding-bottom: 100px;
     overflow-x: hidden;
-
 }
 
 header{
@@ -659,7 +661,6 @@ header{
     }
 }
 }
- 
 main{
     width: 80%;
     height: 1050px;
@@ -903,6 +904,50 @@ main{
                     }
                 }
                 
+            }
+            .tabheader{
+                margin-top: 150px;
+                width: 100%;
+                height: 40px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                .tabheader-items{
+                    width: 55%;
+                    display: flex;
+                    justify-content: space-between;
+                    .tabheader__item{
+                        border-radius: 2px;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;    
+                        width: 24px;
+                        height: 24px;
+                        background: rgba(230, 218, 244, 0.82);
+                        font-family: 'Raleway';
+                        font-style: normal;
+                        font-weight: 400;
+                        font-size: 16px;
+                        line-height: 19px;
+                        color: #FFFFFF;
+                        cursor: pointer;
+                        
+                    }
+                    .active{
+                    background-color: #9650E9;
+    
+                    }
+                    .none{
+                        background-color: rgba(150, 80, 233, 0.1);;
+                        width: 40px;
+                        height: 24px;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        color: black;
+    
+                    }
+                }
             }
         }
 }
@@ -1203,7 +1248,7 @@ footer{
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                display: none;
+                // display: none;
                 .tabheader-items{
                     width: 25%;
                     display: flex;
