--- a/scss/style.scss
+++ b/scss/style.scss
@@ -558,6 +558,7 @@ footer{
         align-items: center;
         justify-content: center;
         flex-direction: column;
+        padding-bottom: 10px;
         .player-name{
             margin-top: 20px;
             font-family: 'Inter';
@@ -663,10 +664,10 @@ header{
 }
 }
 .search{
-    width: 60%;
+    min-width: 80%;
 } 
 main{
-    width: 80%;
+    width: 90%;
     height: 1050px;
     display: flex;
     justify-content: center;
