--- a/css/style.css
+++ b/css/style.css
@@ -1249,7 +1249,25 @@ footer .footer-content .ad {
     margin-right: 10px;
   }
   main .main-content .main-musics .musics .main-player .music-text {
-    display: none;
+    display: block;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: -webkit-max-content;
+    width: -moz-max-content;
+    width: max-content;
+    height: 100px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    overflow-x: scroll;
+  }
+  main .main-content .main-musics .musics .main-player .music-text p {
+    margin-top: 10px;
   }
   main .main-content .main-musics .sections {
     width: 330px;
