--- a/scss/style.scss
+++ b/scss/style.scss
@@ -289,6 +289,7 @@ main{
                         justify-content: center;
                         align-items: center;
                         flex-direction: column;
+                        background-color: red;
                         padding: 20px;width: 90%;
                         p{
                             width: 100%;
