--- a/css/style.css
+++ b/css/style.css
@@ -468,9 +468,7 @@ main .main-content .main-musics .musics .main-player .music-text {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  background-color: red;
   padding: 20px;
-  width: 90%;
 }
 main .main-content .main-musics .musics .main-player .music-text p {
   width: 100%;
@@ -480,6 +478,7 @@ main .main-content .main-musics .musics .main-player .music-text p {
   font-size: 14px;
   line-height: 16px;
   color: #323232;
+  background: red;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
