--- a/scss/style.scss
+++ b/scss/style.scss
@@ -200,7 +200,7 @@ main{
                     }
                 }
                 .main-player{
-                    width: 592px;
+                    width: 100%;
                     height:max-content ;
                     margin-bottom: 20px;
                     display: flex;
@@ -285,11 +285,11 @@ main{
                     }
                     .music-text{
                         margin-top: 10px;
+                        width: 100%;
                         display: flex;
                         justify-content: center;
                         align-items: center;
                         flex-direction: column;
-                        padding: 20px;
                         p{
                             width: 100%;
                             font-family: 'Raleway';
